# livephish-scraper

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-ffmpeg.txt  README.md  SETUP.bat  START.bat  pyproject.toml
.agents/skills/fresh-plan-review/: SKILL.md
.agents/skills/learn/: SKILL.md
.agents/skills/verifier/: SKILL.md
.github/workflows/: build.yml  test-and-build.yml
crates/tapetag/: Cargo.toml
crates/tapetag/src/: align.rs  archive_org.rs  artwork.rs  browser.rs  main.rs  manifest.rs  parser.rs  scanner.rs  tagger.rs
docs/: codex-workflow.md
scripts/: LivePhish.bat  LivePhish.command  build.sh
src/: main.rs  tagger.rs  transcode.rs
src/api/: auth.rs  catalog_api.rs  client.rs  error.rs  mod.rs  stream_api.rs  tests.rs
src/bman/: artwork.rs  cover.rs  download.rs  gdrive.rs  id_map.rs  integration_tests.rs  metadata.rs  mod.rs  oauth.rs  parser.rs  rclone.rs  setlistfm.rs
src/browser/: artist.rs  import.rs  menu.rs  mod.rs  playlist.rs  prompt.rs  queue.rs  resolve.rs  search.rs  settings.rs  show.rs  style.rs
src/catalog/: cache.rs  mod.rs  registry.rs  search.rs  tests.rs
src/config/: credentials.rs  mod.rs  paths.rs  recents.rs  session.rs
src/download/: escape.rs  mod.rs  progress.rs  tests.rs
src/livephish/: __init__.py  __main__.py  api.py  browser.py  catalog.py  cli.py  config.py  downloader.py  models.py  tagger.py
src/models/: format.rs  mod.rs  playlist.rs  sanitize.rs  serde_helpers.rs  show.rs  stream.rs
src/service/: mod.rs  router.rs
src/tagger/: tests.rs
src/transcode/: tests.rs
tests/: conftest.py  test_api.py  test_browser.py  test_catalog.py  test_config.py  test_downloader.py  test_models.py  test_tagger.py
tests/fixtures/: silence.flac
