[package]
name = "nugs"
version = "0.2.0"
edition = "2021"
description = "CLI tool for browsing and downloading music from nugs.net and LivePhish"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
indicatif = "0.17"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
rpassword = "7"
nucleo-matcher = "0.3"
crossterm = "0.28"
base64 = "0.22"
chrono = "0.4"
regex = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = { version = "2", features = ["serde"] }
url = "2"
futures-util = "0.3"
once_cell = "1"
md5 = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
filetime = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
