[package]
name = "nugs"
version = "0.2.0"
edition = "2021"
description = "CLI tool for browsing and downloading music from nugs.net and LivePhish"
license = "MIT"

[features]
default = ["bman"]
bman = ["dep:image", "dep:imageproc", "dep:ab_glyph"]

[dependencies]
ab_glyph = { version = "0.2", optional = true }
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
futures-util = "0.3"
image = { version = "0.25", optional = true }
imageproc = { version = "0.24", optional = true }
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.17"
inquire = "0.7"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
lofty = "0.22"
md5 = "0.7"
nucleo-matcher = "0.3"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
filetime = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
