[package]
name = "tapetag"
version = "0.1.0"
edition = "2021"
description = "GD/JGB metadata fixer TUI — archive.org alignment for Bman downloads"

[[bin]]
name = "tapetag"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
directories = "5"
inquire = "0.7"
lofty = "0.22"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
